# QedFvCoef

./: .clang-format  .gitignore  CMakeLists.txt  pyproject.toml
cli/: CMakeLists.txt  anglepoints.cpp  coef.cpp  main.c  main.cpp  section.cpp  sphere.cpp  utils.hpp
graphics/sphere/: make-frame-data.sh  make-frames.sh  make-movie.sh  sphereplot.sh
graphics/sphere/data/c0_500pts/: c0_500pts_data.tar.bz2  c0_500pts_frames.tar.bz2
graphics/sphere/data/c2_500pts/: c2_500pts_data.tar.bz2  c2_500pts_frames.tar.bz2
lib/: CMakeLists.txt  qedfvcoef.c  qedfvcoef.cpp  qedfvcoef.h  qedfvcoef.hpp  timer.h
lib/qedfv/: coef.cpp  coef.hpp  global.hpp  latticepoints.hpp  latticesum.cpp  latticesum.hpp  vectorutils.hpp
python/: CMakeLists.txt  example.ipynb  findroots.ipynb  qedfv.cpp  stochangles.ipynb
